Practice on List

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <h4>My first Heading 4</h4>
     <h5>My first Heading 5</h5>
     <h6>My first Heading 6</h6>
-    <p>My first Paragraph</p>
+    <p>My first New Paragraph</p>
     <a title="mytag" target="-blank" href="https://www.google.com">Anything</a> </body>
 </html>
